--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ $.extend($.validator.messages, {
         min: $.validator.format("Veuillez entrer une valeur supérieure ou égale à {0}.")
 });}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
+<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJdfos6tEnVQ0RjjMVesc-mF0&key=AIzaSyBiM_oW2u9Sv4yIH2mSVnky_XjjCAiGhWo" allowfullscreen></iframe>
 </div>
 </body>
 </html> 
