--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Berkshire+Swash|Lato:300i,400,700|Sedgwick+Ave" rel="stylesheet">
 	<meta name="description" content="Le dot's est là">
+	<meta property="og:title" content="le dot's est là">
+	<meta property="og:image" content="https://www.facebook.com/122346918446353/photos/a.122346948446350.1073741825.122346918446353/122894905058221/?type=3&theater">
+	<meta property="og:description" content="Voilà voilà des bisous"
 
 	<script src="https://use.fontawesome.com/3ac3c8e93d.js"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
